<?php

declare(strict_types=1);

namespace OxidSolutionCatalysts\Payments\Component\Webhook;

use DateTimeImmutable;
use OxidSolutionCatalysts\Payments\Component\Contract\PaymentContractInterface;
use OxidSolutionCatalysts\Payments\Component\EventSystem\Event\EventContext;
use OxidSolutionCatalysts\Payments\Component\EventSystem\Event\Payment\WebhookReceivedEvent;
use OxidSolutionCatalysts\Payments\Component\EventSystem\EventDispatcherInterface;
use OxidSolutionCatalysts\Payments\Component\Repository\ContractRepositoryInterface;
use OxidSolutionCatalysts\Payments\Component\Repository\WebhookLogRepositoryInterface;
use Psr\Log\LoggerInterface;

class WebhookProcessor implements WebhookProcessorInterface
{
    public function __construct(
        private readonly ContractRepositoryInterface $contractRepository,
        private readonly EventDispatcherInterface $eventDispatcher,
        private readonly WebhookIdempotencyCheckerInterface $idempotencyChecker,
        private readonly WebhookLogRepositoryInterface $logRepository,
        private readonly LoggerInterface $logger
    ) {
    }

    /**
     * @param array<string, mixed> $webhookData
     */
    public function process(array $webhookData): void
    {
        $processData = $this->prepareWebhookProcessing($webhookData);
        if ($processData === null) {
            return;
        }

        [$eventId, $eventType, $eventData, $contract] = $processData;

        $this->dispatchWebhookEvent($eventId, $eventType, $eventData, $contract->getId());
        $this->idempotencyChecker->markAsProcessed($eventId);
        $this->logWebhookEvent($eventId, $eventType, $contract->getId());
    }

    /**
     * @param array<string, mixed> $eventData
     */
    private function extractPaymentIntentId(array $eventData): ?string
    {
        if (!isset($eventData['object']) || !is_array($eventData['object'])) {
            return null;
        }

        /** @var array<string, mixed> $object */
        $object = $eventData['object'];
        $id = $object['id'] ?? null;

        return is_string($id) ? $id : null;
    }

    private function logWebhookEvent(string $eventId, string $eventType, string $contractId): void
    {
        $log = new WebhookLog($eventId, new DateTimeImmutable(), 'processed');
        $log->setEventType($eventType);
        $log->setContractId($contractId);
        $this->logRepository->save($log);
    }

    /**
     * @param array<string, mixed> $webhookData
     * @return array{string, string, array<string, mixed>, PaymentContractInterface}|null
     */
    private function prepareWebhookProcessing(array $webhookData): ?array
    {
        $validated = $this->validateWebhookData($webhookData);
        if ($validated === null) {
            return null;
        }

        [$eventId, $eventType, $eventData] = $validated;

        if ($this->idempotencyChecker->isProcessed($eventId)) {
            $this->logger->info('Webhook already processed, skipping', ['eventId' => $eventId]);
            return null;
        }

        $contract = $this->findContractForWebhook($eventData, $eventType);
        if ($contract === null) {
            return null;
        }

        return [$eventId, $eventType, $eventData, $contract];
    }

    /**
     * @param array<string, mixed> $webhookData
     * @return array{string, string, array<string, mixed>}|null
     */
    private function validateWebhookData(array $webhookData): ?array
    {
        if (!isset($webhookData['id']) || !is_string($webhookData['id'])) {
            $this->logger->warning('Missing or invalid event ID in webhook data');
            return null;
        }

        if (!isset($webhookData['type']) || !is_string($webhookData['type'])) {
            $this->logger->warning('Missing or invalid event type in webhook data');
            return null;
        }

        if (!isset($webhookData['data']) || !is_array($webhookData['data'])) {
            $this->logger->warning('Missing or invalid event data in webhook data');
            return null;
        }

        /** @var array<string, mixed> $eventData */
        $eventData = $webhookData['data'];

        return [$webhookData['id'], $webhookData['type'], $eventData];
    }

    /**
     * @param array<string, mixed> $eventData
     */
    private function findContractForWebhook(array $eventData, string $eventType): ?PaymentContractInterface
    {
        $paymentIntentId = $this->extractPaymentIntentId($eventData);
        if (!$paymentIntentId) {
            $this->logger->warning('Cannot extract payment intent ID from webhook', ['eventType' => $eventType]);
            return null;
        }

        $contract = $this->contractRepository->findByProviderOrderId($paymentIntentId);
        if (!$contract) {
            $this->logger->warning('Contract not found for payment intent', ['paymentIntentId' => $paymentIntentId]);
            return null;
        }

        return $contract;
    }

    /**
     * @param array<string, mixed> $eventData
     */
    private function dispatchWebhookEvent(
        string $eventId,
        string $eventType,
        array $eventData,
        string $contractId
    ): void {
        $context = new EventContext([
            'contractId' => $contractId,
            'webhookEventId' => $eventId,
        ]);

        $event = new WebhookReceivedEvent(
            $context,
            'stripe',
            $eventType,
            $eventData,
            $eventId
        );

        $this->eventDispatcher->dispatch($event);
    }
}
